# triton_inference_test

./: .gitignore  Dockerfile  README.md  classify_image.py  convert_to_onnx.py  docker-compose.yml  pyproject.toml  requirements.txt  test_inference.py
app/: main.py
app/api/: routes.py  schemas.py
app/services/: inference.py
docker/: Dockerfile.triton
model_repository/mobilenet/: config.pbtxt
